# nemesis

./: .gitattributes  .gitignore  README.md
.ccls-cache/@@home@alchemist@dev@ubi_fs@home@ubuntu@catkin_ws@src@husky/: @usr@include@boost@assign@assignment_exception.hpp.blob  @usr@include@boost@assign@list_of.hpp.blob  @usr@include@c++@7@exception.blob  @usr@include@x86_64-linux-gnu@c++@7@bits@c++config.h.blob
.ccls-cache/@home@alchemist@dev@ubi_fs@home@ubuntu@catkin_ws@src@husky/: husky_base@src@horizon_legacy_wrapper.cpp  husky_base@src@horizon_legacy_wrapper.cpp.blob  husky_base@src@husky_base.cpp  husky_base@src@husky_base.cpp.blob  husky_base@src@husky_diagnostics.cpp.blob  husky_base@src@husky_hardware.cpp.blob
husky_base/: CHANGELOG.rst  CMakeLists.txt
husky_base/config/: diagnostics.yaml
husky_base/include/husky_base/: horizon_legacy_wrapper.h  husky_diagnostics.h  husky_hardware.h
husky_base/include/husky_base/horizon_legacy/: ThunderBorgCythonMock.h
husky_base/launch/: base.launch  base_node.launch
husky_base/src/: husky_base.cpp  husky_diagnostics.cpp  husky_hardware.cpp
husky_base/src/cython-thunderborg/: CMakeLists.txt
husky_base/src/cython-thunderborg/cmake/: UseCython.cmake
husky_base/src/cython-thunderborg/src/: CMakeLists.txt  ThunderBorg.pyx  ThunderBorgCythonMock.pyx
husky_base/src/horizon_legacy/: ThunderBorgCythonMock.cpp  ThunderBorgCythonMock.h
husky_base/thunderborg/: ThunderBorgCythonMock.cpp  ThunderBorgCythonMock.h  setup.py
husky_control/config/: control.yaml  teleop_ps4.yaml
husky_control/launch/: control.launch
husky_msgs/msg/: HuskyStatus.msg
mborg_base/: CMakeLists.txt  package.xml
mborg_base/config/: diagnostics.yaml
mborg_base/include/mborg_base/: mborg_diagnostics.h  mborg_hardware.h
mborg_base/launch/: base.launch
mborg_base/src/: mborg_base.cpp  mborg_diagnostics.cpp  mborg_hardware.cpp
mborg_base/src/cython-thunderborg/src/: CMakeLists.txt
mborg_control/: CMakeLists.txt  package.xml
mborg_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml
mborg_control/launch/: control.launch  teleop.launch
mborg_description/: CMakeLists.txt  package.xml
mborg_description/launch/: description.launch
mborg_description/urdf/: mborg.urdf.xacro  wheel.urdf.xacro
mborg_gazebo/: CMakeLists.txt  package.xml
mborg_gazebo/launch/: mborg_empty_world.launch  mborg_playpen.launch  playpen.launch  spawn_mborg.launch
mborg_msgs/: CMakeLists.txt  package.xml
mborg_viz/: CMakeLists.txt  package.xml
mborg_viz/launch/: view_model.launch
nemesis_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
nemesis_base/config/: diagnostics.yaml
nemesis_base/include/nemesis_base/: nemesis_diagnostics.h  nemesis_hardware.h
nemesis_base/launch/: base.launch
nemesis_base/src/: nemesis_base.cpp  nemesis_diagnostics.cpp  nemesis_hardware.cpp
nemesis_control/: CMakeLists.txt  package.xml
nemesis_control/config/: control.yaml  gazebo_interface.yaml  localization.yaml  teleop.yaml  twist_mux.yaml
nemesis_control/launch/: control.launch  teleop.launch
nemesis_description/: package.xml
nemesis_description/urdf/: nemesis.urdf.xacro  wheel.urdf.xacro
nemesis_gazebo/: package.xml
nemesis_gazebo/launch/: nemesis_empty_world.launch  spawn_nemesis.launch
nemesis_msgs/: CMakeLists.txt  package.xml
nemesis_viz/: package.xml
